
AC_PREREQ(2.59)
AC_INIT(libmaycloud, 1.0)
AC_CONFIG_AUX_DIR(config)

AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

# Checks for programs.
AC_PROG_CXX
#AC_PROG_CC
#AC_PROG_INSTALL
#AC_CHECK_TOOL(AR, ar, ar)
#AC_CHECK_TOOL(RANLIB, ranlib, ranlib)
#AC_CHECK_TOOL(MKDIR, mkdir, mkdir)

case "$host_cpu" in
x86_64)
	DEB_ARCH=amd64
	;;
i386)
	DEB_ARCH=i386
	;;
armv6l)
	DEB_ARCH=armhf
	;;
*)
	DEB_ARCH=$host_cpu
esac

AC_SUBST(DEB_ARCH)

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES(deb/DEBIAN/control:deb_control.in)
AC_OUTPUT
